# 3d-scanning

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
docs/: README.md  software_design.md
docs/assets/: data_pipeline.drawio
src/: __init__.py  line_segment.py  vertex.py
src/steps/: line_segments_to_vertices.py
tests/: test_init.py  test_line_segment.py  test_vertex.py
