[tool.poetry]
name = "3d-scanning"
version = "0.1.0"
description = "3d scanning software"
authors = ["OscarFMBG"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pre-commit = "^1.21.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
